--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span>Diljith</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Automation Tester</p>
+        <p>Automation Test Engineer</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
