--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               Software engineer specializing in Test Automation with Python, Selenium, Web APIs, and Restful APIs
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="https://drive.google.com/file/d/14C5pqHWMS_uEvUHLquLD8rU6nr0-dIbj/view" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
